<resources>
    <string name="app_name">Smart Browser</string>
    <string name="search">Search</string>
    <string name="search_or_enter_url">Search or Enter URL</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="github">Github</string>
    <string name="yahoo">Yahoo</string>
    <string name="google">Google</string>
    <string name="developed_by">Developed By</string>
    <string name="my_name">Waqar Ali Siyal</string>
    <string name="my_tag">\@codewithwaqar</string>
</resources>